# OptimalControl

./: .gitignore  build.py  build.sh  config_system.json  kill.sh  run.sh
AdamAlgoritm/: CMakeLists.txt
AdamAlgoritm/include/: Adam.h  AdamService.h  HamiltonBuilder.h  IncludeFiles.h  Router.h  Server.h  Tokenizer.h  Transformer.h
AdamAlgoritm/source/: Adam.cc  AdamService.cc  HamiltonBuilder.cc  Main.cc  Router.cc  Server.cc  Tokenizer.cc
CoreAlgoritm/: CMakeLists.txt  compile_commands.json
CoreAlgoritm/.cache/clangd/index/: Main.cpp.1CC0C8553095DB9C.idx
CoreAlgoritm/gRPC/: adam_api.pb.cc  adam_api.pb.h  adam_api.proto  tasks_api.grpc.pb.cc  tasks_api.grpc.pb.h  tasks_api.pb.h
CoreAlgoritm/include/: AdamApi.h  AdamApiRpc.h  CoreService.h  IncludeFiles.h  OptContrAlg.h  Router.h  Server.h  TasksApi.h  TasksApiRpc.h
CoreAlgoritm/source/: AdamApi.cpp  AdamApiRpc.cc  AdamApiRpc.cpp  CoreService.cc  Main.cc  Main.cpp  OptContrAlg.cc  OptContrAlg.cpp  Router.cpp  Server.cc  Server.cpp  TasksApi.cc  TasksApi.cpp  TasksApiRps.cc
Proxy/: CMakeLists.txt
Proxy/include/: AdamApi.h  AdamService.h  IncludeFiles.h
Proxy/source/: AdamApi.cc  AdamService.cc  Main.cc
TasksAlgoritm/: CMakeLists.txt  compile_commands.json
TasksAlgoritm/.cache/clangd/index/: Main.cpp.8287281860B65EC1.idx
TasksAlgoritm/include/: EquationsBuilder.h  FuncCalcBuilder.h  FunctionalBuilder.h  GoldenRatio.h  IncludeFiles.h  Tasks.h  TasksService.h  Tokenizer.h  Transformer.h
TasksAlgoritm/source/: EquationsBuilder.cc  FuncCalcBuilder.cc  FunctionalBuilder.cc  GoldenRatio.cc  Main.cc  Tasks.cc  TasksService.cc  Tokenizer.cc
gRPC/: adam_api.grpc.pb.cc  adam_api.grpc.pb.h  adam_api.pb.cc  adam_api.pb.h  adam_api.proto  core.grpc.pb.cc  core.grpc.pb.h  core.pb.cc  core.pb.h  core.proto  protoc_grpc.sh  tasks_api.grpc.pb.cc  tasks_api.grpc.pb.h  tasks_api.pb.cc  tasks_api.pb.h  tasks_api.proto
lib/MathPlot/: DiffEvolution.h  MathAnalys.h  Matrix.h  RungeKutt.h  function_builder.h  function_wrapper.h  interpolation.h  iterator.h  matrix.h
optimal_control/: README.md  pubspec.yaml
optimal_control/android/app/: build.gradle.kts
optimal_control/android/app/src/main/: AndroidManifest.xml
optimal_control/android/app/src/main/kotlin/com/example/optimal_control/: MainActivity.kt
optimal_control/ios/Runner/: Info.plist
optimal_control/ios/Runner.xcodeproj/: project.pbxproj
optimal_control/lib/: main.dart  store.dart
optimal_control/lib/gRPC/: core.pb.dart  core.pbenum.dart  core.pbgrpc.dart  core.pbjson.dart
optimal_control/lib/pages/: home_page.dart  opt_control_page.dart  opt_path_page.dart  optimize_params_page.dart  task_equation_page.dart  tasks_params_page.dart  tasks_result_page.dart
optimal_control/lib/services/: ChartApi.dart  CoreApi.dart  chart_api.dart  core.dart  core_api.dart  expr_parser.dart
optimal_control/lib/shared/forms/: calc_form.dart  input_task_form.dart  task_params_form.dart
optimal_control/lib/shared/ui/: formuls.dart  input.dart  menu_button.dart  submit_button.dart  text.dart
optimal_control/linux/: CMakeLists.txt
optimal_control/linux/runner/: my_application.cc
optimal_control/macos/Runner.xcodeproj/: project.pbxproj
optimal_control/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
optimal_control/macos/Runner/Configs/: AppInfo.xcconfig
optimal_control/test/: widget_test.dart
optimal_control/web/: index.html  manifest.json
optimal_control/windows/: CMakeLists.txt
optimal_control/windows/runner/: Runner.rc  main.cpp
release/: task.json
